--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@
 body {
     font-family: "Inter";
 }
+
+.homepage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
